[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/interactive/blue_lever_left_o2.svg" type="Texture" id=1]
[ext_resource path="res://assets/interactive/blue_lever_right_o2.svg" type="Texture" id=2]
[ext_resource path="res://scenes/objects/BlueSwitch.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/switch.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 20, 14 )

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "lever",
"speed": 5.0
} ]

[node name="BlueSwitch" type="Area2D"]
script = ExtResource( 3 )

[node name="SwitchCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 18 )
shape = SubResource( 39 )

[node name="SwitchSprites" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 40 )
animation = "lever"

[node name="SwitchAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_BlueSwitch_body_entered"]
